include/poncelet/poncelet.h

typedef struct pon_vec3 { double x, y, z; } pon_vec3;
typedef enum pon_status {
    PON_OK = 0,
    PON_UNSUPPORTED,
    PON_INVALID_TYPE,
    PON_INVALID_HANDLE,
    PON_INVALID_ARG
} pon_status;
typedef enum pon_determinism {
    PON_DET_LOOSE = 0,
    PON_DET_PLATFORM_STABLE,
    PON_DET_BIT_EXACT
} pon_determinism;
typedef struct pon_state {
    pon_vec3 position;
    pon_vec3 velocity;
    double   time_alive_s;
    double   distance_travelled_m;
    int      medium_id;
    int      alive;
    uint32_t flags;              /* PON_FLAG_* */
    /* 6-DOF only (0 / identity otherwise). Quaternion is (w,x,y,z), body->world,
     * nose along body +x. `ang_vel_radps` is body-frame (x = spin rate). */
    double   orientation_quat[4];
    pon_vec3 ang_vel_radps;
    double   angle_of_attack_rad;
} pon_state;
typedef struct pon_sim pon_sim;
PON_API const char* pon_version_string(void);
PON_API pon_sim* pon_sim_create(pon_determinism determinism);
PON_API void     pon_sim_destroy(pon_sim* sim);
PON_API void pon_sim_set_gravity(pon_sim* sim, pon_vec3 g);
/* Resolve firing-site conditions through the ISA model and store the resulting
 * air density + local speed of sound on the sim's environment. Pass 0 for
 * temperature_K / pressure_Pa to use the ISA value at that altitude;
 * rel_humidity is 0..1. */
PON_API void pon_sim_set_atmosphere(pon_sim* sim, double altitude_m,
                                    double temperature_K, double pressure_Pa,
                                    double rel_humidity);
/* `user` is the pointer handed here and must outlive the callback. Pass
 * fn = NULL to remove the trace. */
typedef void (*pon_trace_fn)(const pon_trace_event* ev, void* user);
PON_API void pon_sim_set_trace_sink(pon_sim* sim, pon_trace_fn fn, void* user);
/* 1 if `id` names an entry in the shipped projectile catalog (data/
 * projectiles.csv) or a runtime overlay, else 0. */
PON_API int pon_catalog_has(const char* id);
/* Register a named catalog round by id. Returns a type id, or 0xFFFFFFFF if
 * `id` is unknown. Equivalent to pon::catalog::get(id) + registerType. */
PON_API uint32_t pon_register_catalog_type(pon_sim* sim, const char* id);
/* Returns a state id, or 0xFFFFFFFF on failure. `speed_mps <= 0` uses the
 * type's muzzle speed. */
PON_API uint32_t pon_spawn(pon_sim* sim, uint32_t type_id,
                           pon_vec3 position, pon_vec3 direction,
                           double speed_mps);
/* As pon_spawn, plus a FidelityTier (0 Hitscan / 1 AnalyticDrag / 2 Integrated)
 * and a PON_PRECISION_* bitmask. */
PON_API uint32_t pon_spawn_precise(pon_sim* sim, uint32_t type_id,
                                   pon_vec3 position, pon_vec3 direction,
                                   double speed_mps, int fidelity_tier,
                                   uint32_t precision_flags);
/* Advance all live projectiles by dt against an empty (hit-nothing) world.
 * The World callback surface comes to the C ABI in item 6. */
PON_API void pon_step(pon_sim* sim, double dt_s);
PON_API pon_status pon_get_state(const pon_sim* sim, uint32_t state_id,
                                 pon_state* out);
PON_API size_t     pon_live_count(const pon_sim* sim);
PON_API void       pon_despawn(pon_sim* sim, uint32_t state_id);